@@ -828,13 +828,13 @@ SHORT fasp_format_dstr_dcsr (dSTRmat *A,
 
 dCSRmat fasp_format_bdcsr_dcsr (block_dCSRmat *Ab);
 
-dCSRLmat * fasp_format_dcsrl_dcsr (dCSRmat *A);
+dCSRLmat * fasp_format_dcsr_dcsrl (dCSRmat *A);
 
 dCSRmat fasp_format_dbsr_dcsr (dBSRmat *B);
 
-SHORT fasp_format_dcsr_dbsr (dBSRmat *A, 
-                             const INT nb, 
-                             dCSRmat *B);
+void fasp_format_dcsr_dbsr (dBSRmat *A, 
+                            const INT nb, 
+                            dCSRmat *B);
 
 dBSRmat fasp_format_dstr_dbsr (dSTRmat *B);
 
@@ -2147,7 +2147,7 @@ SHORT fasp_dbsr_getblk (dBSRmat *A,
                         INT n, 
                         dBSRmat *B);
 
-dCSRmat fasp_dbsr_getblk_dcsr(dBSRmat *A);
+dCSRmat fasp_dbsr_getblk_dcsr (dBSRmat *A);
 
 
 /*-------- In file: sparse_block_omp.c --------*/
